--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["framework", "stratum"],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0"
+        "php": "^5.3|^7.3|^8.0"
     },
     "autoload": {        
         "psr-0": {
